[gd_scene format=3 uid="uid://dgw5xvawo8d7q"]

[ext_resource type="Script" uid="uid://lf433vsmf5dp" path="res://scripts/Main.gd" id="1_fon4q"]

[node name="Main (Node2D)" type="Node2D" unique_id=1961181229]
script = ExtResource("1_fon4q")

[node name="UI" type="CanvasLayer" parent="." unique_id=1236685054]

[node name="VBoxContainer" type="VBoxContainer" parent="UI" unique_id=1204274844]
offset_right = 40.0
offset_bottom = 40.0

[node name="StartServerBtn" type="Button" parent="UI/VBoxContainer" unique_id=1004597366]
layout_mode = 2
text = "Start Server"

[node name="ConnectBtn" type="Button" parent="UI/VBoxContainer" unique_id=1237564558]
layout_mode = 2
text = "Connect"

[node name="HostEdit" type="LineEdit" parent="UI/VBoxContainer" unique_id=396754557]
layout_mode = 2
text = "127.0.01"

[node name="InfoLabel" type="Label" parent="UI" unique_id=565923544]
offset_right = 40.0
offset_bottom = 23.0
text = "Ready"

[node name="MainCamera" type="Camera2D" parent="." unique_id=1114845864]
metadata/current = true
